--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <meta property="og:description" content="Portfolio, recent projects, and contact.">
     <meta property="og:image" content="images/preview.jpg">
     <title>dotKo</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="./node_modules/bootstrap-icons/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="https://www.bootstrapcdn.com/bootstrapicons/1.4.0/bootstrap-icons.css">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
+        <link rel="stylesheet" href="./css/style.css">
 </head>
 <body class="bg-dark">
     <!-- main project -->
